docs: delete subscriptions handler
